--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,19 +3,18 @@ body {
 }
 
 h1 {
-  font-family: 'Great Vibes', cursive;
-  color: aquamarine;
+  color: navy;
   text-shadow: 2px 2px #000000;
-  font-size: 6vw;
+  font-size: 5vw;
+  font-family: myFirstFont;
   position: relative;
   height: 400px;
   display: block;
-  background-image: url('https://www.hawaii-aloha.com/wp-content/uploads/2017/04/Lanikai_beach_Oahu_Hawaii.jpg');
+  background-image: url("../images/beach.jpg");
   background-size: cover;
   background-position: center;
   border-right: 0;
   line-height: 400px;
-
   }
 
 }
@@ -42,4 +41,8 @@ form {
 #submit {
   margin-top: 30px;
   background-color: lightblue;
+}
+
+#amp {
+  font-size: 3vw;
 }
