--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,32 +1,48 @@
 body {
   text-align: center;
+  font-family: myFirstFont;
 }
 
-h1 {
-  color: navy;
-  text-shadow: 2px 2px #000000;
-  font-size: 5vw;
-  font-family: myFirstFont;
-  position: relative;
-  height: 400px;
+header {
   display: block;
   background-image: url("../images/beach.jpg");
   background-size: cover;
   background-position: center;
+  height: 100%;
+  padding: -5px;
+  margin:0;
+}
+
+h1 {
+  color: navy;
+  text-shadow: 2px 2px #fba087;
+  font-size: 5vw;
   border-right: 0;
   line-height: 400px;
-  }
-
+  top: 50px;
+  position: relative;
 }
+
+h2 {
+  font-size: 1vw;
+  margin-top: 10%;
+  position: relative;
+}
+
+h3 {
+  font-size:70px;
+}
+
 span {
    margin-top: -150px;
    margin-left: 20px;
    width: 700px;
 }
 
-h2 {
-  font-family: Helvetica,sans-serif;
-  font-size: 20px;
+div {
+  display: block;
+  top: 120px;
+  padding-top: 120px;
 }
 
 form {
