--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,42 +1,41 @@
 body {
+  margin-top: -90px;
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-bottom: 10px;
+  border: 0;
   text-align: center;
   font-family: myFirstFont;
 }
 
 header {
-  display: block;
   background-image: url("../images/beach.jpg");
   background-size: cover;
   background-position: center;
-  height: 100%;
-  padding: -5px;
-  margin:0;
+  padding:0;
+  margin-top: 0;
 }
 
-h1 {
+ h1 {
   color: navy;
   text-shadow: 2px 2px #fba087;
   font-size: 5vw;
-  border-right: 0;
-  line-height: 400px;
-  top: 50px;
-  position: relative;
+}
+
+.logo h1 {
+  color: navy;
+  text-shadow: 2px 2px #fba087;
+  font-size: 5vw;
+  vertical-align: middle;
 }
 
 h2 {
   font-size: 1vw;
-  margin-top: 10%;
-  position: relative;
+  margin-top: 500px;
 }
 
 h3 {
   font-size:70px;
-}
-
-span {
-   margin-top: -150px;
-   margin-left: 20px;
-   width: 700px;
 }
 
 div {
@@ -49,6 +48,30 @@ form {
   font-family: Helvetica,sans-serif;
   display: block;
 }
+
+.registry {
+  font-family: Helvetica, sans-serif;
+  font-size: 20px;
+  background-color: #F2F2F2;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.registry h4{
+  font-size: 40px;
+  vertical-align: middle;
+  margin: 10px;
+  padding: 5px;
+}
+
+.registry h4{
+  font-size: 40px;
+  vertical-align: middle;
+  margin: 10px;
+  padding: 5px;
+}
+
 
 #name, #address {
   margin-right: 30px;
